--- a/examples/motzkin.ipynb
+++ b/examples/motzkin.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "source": [
     "The Motzkin polynomial is nonnegative but is not a sum of squares as we can verify numerically as follows.\n",
-    "We first need to pick an SDP solver, see [here](http://www.juliaopt.org/JuMP.jl/dev/installation/#Getting-Solvers-1) for a list of the available choices."
+    "We first need to pick an SDP solver, see [here](http://jump.dev/JuMP.jl/dev/installation/#Getting-Solvers-1) for a list of the available choices."
    ]
   },
   {
