[ci skip] Fix SOS matrix notebook

--- a/examples/Sum-of-Squares Matrices.ipynb
+++ b/examples/Sum-of-Squares Matrices.ipynb
@@ -53,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using SumOfSquares"
@@ -75,7 +77,7 @@
    "outputs": [],
    "source": [
     "using CSDP\n",
-    "factory = optimizer_with_attributes(CSDP.Optimizer, "printlevel" => 0);"
+    "factory = optimizer_with_attributes(CSDP.Optimizer, \"printlevel\" => 0);"
    ]
   },
   {
@@ -87,7 +89,7 @@
    "outputs": [],
    "source": [
     "using MosekTools\n",
-    "factory = optimizer_with_attributes(Mosek.Optimizer, "QUIET" => true);"
+    "factory = optimizer_with_attributes(Mosek.Optimizer, \"QUIET\" => true);"
    ]
   },
   {
@@ -269,8 +271,12 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.1.1",
    "language": "julia",
    "name": "julia-1.1"
   },
