--- a/dev/references.bib
+++ b/dev/references.bib
@@ -10,6 +10,20 @@
   journal   = {Nonconvex Optimization and Its Applications},
 }
 
+@Article{Hesse1973,
+  author    = {Hesse, Rick},
+  journal   = {Operations Research},
+  title     = {A Heuristic Search Procedure for Estimating a Global Solution of Nonconvex Programming Problems},
+  year      = {1973},
+  issn      = {1526-5463},
+  month     = dec,
+  number    = {6},
+  pages     = {1267--1280},
+  volume    = {21},
+  doi       = {10.1287/opre.21.6.1267},
+  publisher = {Institute for Operations Research and the Management Sciences (INFORMS)},
+}
+
 @Book{Lasserre2009,
   author    = {Lasserre, Jean Bernard},
   publisher = {Imperial College Press},
