--- a/docs/src/references.bib
+++ b/docs/src/references.bib
@@ -1,3 +1,11 @@
+ @Article{Fawzi2018,
+  title = {On Representing the Positive Semidefinite Cone Using the Second-Order Cone},
+  author = {Fawzi, Hamza},
+  year = {2018},
+  journal = {Mathematical Programming},
+  pages = {1--10},
+  publisher = {Springer},
+}
  
 @Book{Floudas1999,
   author    = {Floudas, Christodoulos A. and Pardalos, Pãnos M. and Adjiman, Claire S. and Esposito, William R. and Gümüş, Zeynep H. and Harding, Stephen T. and Klepeis, John L. and Meyer, Clifford A. and Schweiger, Carl A.},
@@ -48,4 +56,18 @@
   booktitle = {The IMA Volumes in Mathematics and its Applications},
   doi       = {10.1007/978-0-387-09686-5_7},
   issn      = {0940-6573},
+}
+
+@Article{Parrilo2003,
+  title = {Semidefinite Programming Relaxations for Semialgebraic Problems},
+  author = {Parrilo, Pablo A},
+  year = {2003},
+  month = may,
+  journal = {Mathematical programming},
+  volume = {96},
+  number = {2},
+  pages = {293--320},
+  publisher = {Springer},
+  issn = {1436-4646},
+  doi = {10.1007/s10107-003-0387-5},
 }
