Add API reference

--- a/docs/src/references.bib
+++ b/docs/src/references.bib
@@ -1,4 +1,33 @@
- @Article{Fawzi2018,
+ @Article{Ahmadi2017,
+  title = {{{DSOS}} and {{SDSOS}} Optimization: {{More}} Tractable Alternatives to Sum of Squares and Semidefinite Optimization},
+  author = {Ahmadi, A. A. and Majumdar, A.},
+  year = {2017},
+  month = jun,
+  journal = {ArXiv e-prints},
+  eprint = {1706.02586},
+  primaryclass = {math.OC},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Data Structures and Algorithms,Computer Science - Systems and Control,Mathematics - Optimization and Control,SOS,Statistics - Machine Learning}
+}
+
+@book{Blekherman2012,
+  title = {Semidefinite {{Optimization}} and {{Convex Algebraic Geometry}}},
+  author = {Blekherman, Grigoriy and Parrilo, Pablo A and Thomas, Rekha R},
+  year = {2012},
+  eprint = {http://epubs.siam.org/doi/pdf/10.1137/1.9781611972290},
+  publisher = {{Society for Industrial and Applied Mathematics}},
+  address = {Philadelphia, PA},
+}
+
+@Book{Cox2015,
+  title = {Ideals, Varieties, and Algorithms},
+  author = {Cox, David A and Little, John and O'Shea, Donal},
+  year = {2015},
+  publisher = {Springer},
+}
+
+@Article{Fawzi2018,
   title = {On Representing the Positive Semidefinite Cone Using the Second-Order Cone},
   author = {Fawzi, Hamza},
   year = {2018},
