--- a/docs/src/references.bib
+++ b/docs/src/references.bib
@@ -1,3 +1,40 @@
+ @Article{Ahmadi2017,
+  title = {{{DSOS}} and {{SDSOS}} Optimization: {{More}} Tractable Alternatives to Sum of Squares and Semidefinite Optimization},
+  author = {Ahmadi, A. A. and Majumdar, A.},
+  year = {2017},
+  month = jun,
+  journal = {ArXiv e-prints},
+  eprint = {1706.02586},
+  primaryclass = {math.OC},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Data Structures and Algorithms,Computer Science - Systems and Control,Mathematics - Optimization and Control,SOS,Statistics - Machine Learning}
+}
+
+@book{Blekherman2012,
+  title = {Semidefinite {{Optimization}} and {{Convex Algebraic Geometry}}},
+  author = {Blekherman, Grigoriy and Parrilo, Pablo A and Thomas, Rekha R},
+  year = {2012},
+  eprint = {http://epubs.siam.org/doi/pdf/10.1137/1.9781611972290},
+  publisher = {{Society for Industrial and Applied Mathematics}},
+  address = {Philadelphia, PA},
+}
+
+@Book{Cox2015,
+  title = {Ideals, Varieties, and Algorithms},
+  author = {Cox, David A and Little, John and O'Shea, Donal},
+  year = {2015},
+  publisher = {Springer},
+}
+
+@Article{Fawzi2018,
+  title = {On Representing the Positive Semidefinite Cone Using the Second-Order Cone},
+  author = {Fawzi, Hamza},
+  year = {2018},
+  journal = {Mathematical Programming},
+  pages = {1--10},
+  publisher = {Springer},
+}
  
 @Book{Floudas1999,
   author    = {Floudas, Christodoulos A. and Pardalos, Pãnos M. and Adjiman, Claire S. and Esposito, William R. and Gümüş, Zeynep H. and Harding, Stephen T. and Klepeis, John L. and Meyer, Clifford A. and Schweiger, Carl A.},
@@ -48,4 +85,18 @@
   booktitle = {The IMA Volumes in Mathematics and its Applications},
   doi       = {10.1007/978-0-387-09686-5_7},
   issn      = {0940-6573},
+}
+
+@Article{Parrilo2003,
+  title = {Semidefinite Programming Relaxations for Semialgebraic Problems},
+  author = {Parrilo, Pablo A},
+  year = {2003},
+  month = may,
+  journal = {Mathematical programming},
+  volume = {96},
+  number = {2},
+  pages = {293--320},
+  publisher = {Springer},
+  issn = {1436-4646},
+  doi = {10.1007/s10107-003-0387-5},
 }
