--- a/dev/references.bib
+++ b/dev/references.bib
@@ -87,6 +87,17 @@
   issn      = {0940-6573},
 }
 
+@Article{Murty1987,
+  title = {Some {{NP-complete}} Problems in Quadratic and Nonlinear Programming},
+  author = {Murty, Katta G and Kabadi, Santosh N},
+  year = {1987},
+  journal = {Mathematical Programming: Series A and B},
+  volume = {39},
+  number = {2},
+  pages = {117--129},
+  publisher = {Springer-Verlag Berlin, Heidelberg}
+}
+
 @Article{Parrilo2003,
   title = {Semidefinite Programming Relaxations for Semialgebraic Problems},
   author = {Parrilo, Pablo A},
