--- a/dev/references.bib
+++ b/dev/references.bib
@@ -61,6 +61,19 @@
   publisher = {Institute for Operations Research and the Management Sciences (INFORMS)},
 }
 
+@article{Kapelevich2023,
+  title = {Sum of Squares Generalizations for Conic Sets},
+  author = {Kapelevich, Lea and Coey, Chris and Vielma, Juan Pablo},
+  year = {2023},
+  month = may,
+  journal = {Mathematical Programming},
+  volume = {199},
+  number = {1},
+  pages = {1417--1429},
+  issn = {1436-4646},
+  doi = {10.1007/s10107-022-01831-6},
+}
+
 @Book{Lasserre2009,
   author    = {Lasserre, Jean Bernard},
   publisher = {Imperial College Press},
@@ -96,6 +109,18 @@
   number = {2},
   pages = {117--129},
   publisher = {Springer-Verlag Berlin, Heidelberg}
+}
+
+@Article{Papp2017,
+  title = {Sum-of-Squares Optimization without Semidefinite Programming},
+  author = {Papp, D. and Y{\i}ld{\i}z, S.},
+  year = {2017},
+  month = dec,
+  journal = {ArXiv e-prints},
+  eprint = {1712.01792},
+  primaryclass = {math.OC},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  archiveprefix = {arxiv},
 }
 
 @Article{Parrilo2003,
